<resources>
    <string name="app_name">login_Screen</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="forget">Forget Password?</string>
    <string name="login">Login</string>
    <string name="check">Remember me</string>
    <string name="Dont">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
</resources>