<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007">

        </ImageView>


        <EditText
            android:id="@+id/textphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rounded_shape"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:hint="@string/phone"
            android:padding="20dp"
            android:textColorHint="@color/orange"
            app:layout_constraintEnd_toEndOf="@id/img"
            app:layout_constraintStart_toStartOf="@id/img"
            app:layout_constraintTop_toBottomOf="@id/img">

        </EditText>

        <EditText
            android:id="@+id/textpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rounded_shape"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:padding="20dp"
            android:textColorHint="@color/orange"
            app:layout_constraintEnd_toEndOf="@id/textphone"
            app:layout_constraintStart_toStartOf="@id/textphone"
            app:layout_constraintTop_toBottomOf="@id/textphone">

        </EditText>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/orange"
            android:buttonTint="@color/orange"
            android:paddingLeft="10dp"
            android:text="@string/check"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/textpassword"
            app:layout_constraintTop_toBottomOf="@id/textpassword">

        </CheckBox>

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textpassword"
            app:layout_constraintTop_toBottomOf="@id/textpassword"
            app:layout_constraintTop_toTopOf="@id/checkbox">

        </TextView>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rounded_shape"
            android:backgroundTint="@color/orange"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textpassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox">

        </Button>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintEnd_toEndOf="@+id/login"
            app:layout_constraintStart_toStartOf="@+id/login">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>